@@ -14,6 +14,9 @@ not yet  BJH  Release 10.51.00
               pnmsmooth: Don't display pnmconvol messages (i.e. run
               pnmconvol with -quiet).
 
+              palmtopnm: fix for pixel size 16.  Thanks Paul Bolle
+              <pebolle@tiscali.nl>.
+
               pnmsmooth: Fail politely when convolution matrix is so
               large as to bust the system's program parameter size limit
               on the invocation of pnmconvol.
